--- a/style.css
+++ b/style.css
@@ -49,3 +49,12 @@ body{
     text-decoration: 1px solid black underline;
     text-underline-position: under;
 }
+
+.error{
+    display: none;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, 50%);
+    font-size: 40px;
+}
